# bnbscraper

./: Cargo.toml  bb.html  index.html
src/: main.rs
