[package]
name = "bnbscraper"
version = "0.1.0"
authors = ["Otniel Aguilar <otnieel.aguilar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
select = "*"
scraper = "*"
prettytable-rs = "*"
tokio-postgres = "*"
color-eyre = "0.5.11"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
reqwest = { version = "0.11.4", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.9.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

